[gd_scene load_steps=6 format=3 uid="uid://cr7722t3ktcl4"]

[ext_resource type="Script" uid="uid://c70rsb2k8g05v" path="res://characters/Character.gd" id="1_52n4a"]
[ext_resource type="Texture2D" uid="uid://frq4grv1dvoo" path="res://characters/charatexture/cultisteBody.png" id="2_ab0ni"]
[ext_resource type="Texture2D" uid="uid://b0q8mhrqooms" path="res://characters/characterInitiative/cultisteIni.png" id="3_0k1kv"]
[ext_resource type="Resource" uid="uid://bpsapqkry8g3q" path="res://actions/attaque_basique.tres" id="4_4a20v"]
[ext_resource type="Texture2D" uid="uid://j0hygaxu62ja" path="res://characters/charatexture/PriestBody.png" id="5_ab0ni"]

[node name="CharacterTestennemie2" type="Node2D"]
script = ExtResource("1_52n4a")
portrait_texture = ExtResource("2_ab0ni")
initiative_icon = ExtResource("3_0k1kv")
skill_resources = Array[Resource]([ExtResource("4_4a20v"), ExtResource("4_4a20v"), ExtResource("4_4a20v"), ExtResource("4_4a20v")])
is_player_controlled = false

[node name="HerosTexture1" type="TextureRect" parent="."]
offset_left = -133.0
offset_top = -259.0
offset_right = 133.0
offset_bottom = -2.0
mouse_filter = 2
texture = ExtResource("5_ab0ni")

[node name="Selector" type="TextureRect" parent="."]
modulate = Color(2, 2, 2, 1)
self_modulate = Color(1, 1, 1, 0)
offset_left = -133.0
offset_top = -259.0
offset_right = 133.0
offset_bottom = -2.0
mouse_filter = 2
texture = ExtResource("5_ab0ni")

[node name="name" type="Label" parent="."]
offset_left = -35.0
offset_top = -261.0
offset_right = 9.0
offset_bottom = -238.0
text = "name"

[node name="HP" type="Label" parent="."]
offset_left = -91.0
offset_top = -19.0
offset_right = -45.0
offset_bottom = 4.0
text = "Hp"

[node name="Stress" type="Label" parent="."]
offset_left = -91.0
offset_top = 8.0
offset_right = -45.0
offset_bottom = 31.0
text = "stress"

[node name="horny" type="Label" parent="."]
offset_left = -91.0
offset_top = 35.0
offset_right = -45.0
offset_bottom = 58.0
text = "horny"

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -123.0
offset_top = -325.0
offset_right = 110.0
offset_bottom = 57.0

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
